--- a/r2/r2/templates/usertableitem.html
+++ b/r2/r2/templates/usertableitem.html
@@ -26,7 +26,10 @@
 <tr>
   %for cell in thing.cells:
     <td>
-      ${cell_type(cell)}
+      <%
+        thing.name = cell
+       %>
+      ${cell_type()}
     </td>
   %endfor
 </tr>
