--- a/r2/r2/templates/printablebuttons.html
+++ b/r2/r2/templates/printablebuttons.html
@@ -228,7 +228,7 @@
        css_class, alt_css_class = alt_css_class, css_class
  %>
 <span class="${class_name} toggle" style="${style}">
- <a class="option active ${css_class}" href="#" 
+ <a class="option active ${css_class}" href="#" tabindex="100"
     %if login_required and not c.user_is_loggedin:
       onclick="return showcover('', '${callback}_' + $(this).thing_id());"
     %else:
