--- a/r2/r2/templates/createsubreddit.html
+++ b/r2/r2/templates/createsubreddit.html
@@ -36,7 +36,7 @@ function update_title(elem) {
 }
 </script>
 
-<%def name="radio_type(name, text)">
+<%def name="radio_type(name, title, text)">
   <% full_name = "type_" + name %>
   <tr>
     <td class="nowrap nopadding">
@@ -47,7 +47,7 @@ function update_title(elem) {
              checked="checked"
              %endif
              />
-      <label for="${full_name}">${name}</label>
+      <label for="${full_name}">${title}</label>
     </td>
     <td class="leftpad"><span class="gray">${text}</span></td>
   </tr>
@@ -152,10 +152,11 @@ function update_title(elem) {
       </th>
       <td colspan="2" class="prefright">
          <table >
-         ${radio_type(_("public"), _("anyone can view and submit"))}
-         ${radio_type(_("restricted"), 
+         ${radio_type("public", _("public"), _("anyone can view and submit"))}
+         ${radio_type("restricted", _("restricted"), 
                 _("anyone can view, but only contributors can submit links"))}
-         ${radio_type(_("private"), _("only contributors can view and submit"))}
+         ${radio_type("private", _("private"),
+                _("only contributors can view and submit"))}
          </table>
       </td>
     </tr>
