* add nofollow to comment titles on low point (or banned) comments or links.  * have submissions to banned reddits generate an error message on /submit.  * make unicode user name pages 404 rather than 500

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -1456,6 +1456,9 @@ textarea.gray { color: gray; }
     -moz-outline: none;
 }
 
+.toolbar .likes .score.likes {display: inline-block;}
+.toolbar .dislikes .score.dislikes {display: inline-block;}
+
 .toolbar a, .toolbar .clickable {
     cursor: pointer;
     color: #336699;
