--- a/r2/r2/templates/newlink.html
+++ b/r2/r2/templates/newlink.html
@@ -93,6 +93,7 @@ ${thing.formtabs_menu}
       reddit.sr_cache = ${unsafe(thing.sr_searches)};
     </script>
     ${error_field("SUBREDDIT_NOEXIST", "sr", "div")}
+    ${error_field("SUBREDDIT_NOTALLOWED", "sr", "div")}
     ${error_field("SUBREDDIT_REQUIRED", "sr", "div")}
     
     <div id="suggested-reddits">
