fix comment rate limiter.

--- a/r2/r2/templates/usertext.html
+++ b/r2/r2/templates/usertext.html
@@ -70,6 +70,7 @@
                          style = "" if thing.creating else "display: none")}
 
         ${error_field("TOO_LONG", "text", "span")}
+        ${error_field("RATELIMIT", "ratelimit", "span")}
         ${error_field("NO_TEXT", "text", "span")}
       
         <div class="usertext-buttons">
