Make [M] optional, add [A]

--- a/r2/r2/templates/link.html
+++ b/r2/r2/templates/link.html
@@ -181,9 +181,9 @@
 <%def name="child()">
 </%def>
 
-<%def name="buttons(comments=True, delete=True, report=True, ban=True, additional='')">
+<%def name="buttons(comments=True, delete=True, report=True, additional='')">
   ${LinkButtons(thing, comments = comments, delete = delete, 
-                report = report, ban = ban)}
+                report = report)}
 </%def>
 
 <%def name="thumbnail()">
