--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -485,7 +485,9 @@ before enabling */
 .tagline a {color: #369; text-decoration: none; }
 .tagline .friend    { color: orangered }
 .tagline .submitter { color: #0055df }
-.tagline .moderator { color: #338833 }
+.tagline .moderator { color: #228822 }
+.tagline .admin { color: #ff0000; }
+.tagline a.author.admin { font-weight: bold }
 .tagline a:hover { text-decoration: underline }
 
 .media-button .option { color: red; }
@@ -687,6 +689,11 @@ a.star { text-decoration: none; color: #ff8b60 }
     color: #888;
     font-weight: bold;
     padding: 0 1px;
+}
+
+.entry .buttons li a.nonbutton {
+    color: #369;
+    font-weight: normal;
 }
 
 .entry .buttons a:hover {text-decoration: underline}
