Avoid bug #417 with Safari caching of iframes Fix thedailyshow scraper to work with their new site layout Add GenericScraper for manually adding media content to links

--- a/r2/r2/templates/mediaembed.html
+++ b/r2/r2/templates/mediaembed.html
@@ -19,6 +19,10 @@
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2009
 ## CondeNet, Inc. All Rights Reserved.
 ################################################################################
+<%!
+  from r2.lib.utils import randstr
+%>
 <iframe src="http://${thing.media_domain}/mediaembed/${thing.id36}"
+        id="media-embed-${thing.id36}-${randstr(3)}" class="media-embed"
         width="${thing.width}" height="${thing.height}" border="0"
-        frameBorder="0" scrolling="no"></iframe>
+        frameBorder="0" scrolling="${'auto' if thing.scrolling else 'no'}"></iframe>
