--- a/r2/r2/templates/utils.html
+++ b/r2/r2/templates/utils.html
@@ -360,7 +360,7 @@ ${unsafe(txt)}
       post_site: "${c.site.name if not c.default_sr else ''}",
       /* are we in an iframe */
       cnameframe: ${"true" if (c.cname and not c.authorized_cname) else "false"},
-      /* this page's referer" */
+      /* this page's referer */
       referer: "${request.referer or ""}",
       /* the user's voting hash */
       modhash: ${"'%s'" % c.modhash or "false"},
