Add <guid>s to the feeds for comments and messages

--- a/r2/r2/templates/comment.xml
+++ b/r2/r2/templates/comment.xml
@@ -35,6 +35,7 @@
 %>
 
 <item>
+  <guid isPermaLink="true">${thing.permalink}</guid>
   <title>${author} ${_("on")} ${thing.link.title}</title>
   <link>${thing.permalink}</link>
   <dc:date>${thing._date.isoformat()}-0700</dc:date>
