--- a/r2/r2/templates/messagecompose.html
+++ b/r2/r2/templates/messagecompose.html
@@ -117,10 +117,8 @@ function admincheck(elem) {
          links to the submissions that you're having trouble with.</li>
 
        <li>If you're concerned that something is wrong with your entire
-         account, please send &#32;
-         <a href="/feedback">feedback</a>
-         &#32;
-         instead.</li>
+         account, please
+         &#32;<a href="/message/compose?to=${g.admin_message_acct|u}">send a private message to all of the admins.</a>&#32;(It'll be dealt with faster)</li>
      </ul>
   </div>
 
