--- a/r2/r2/templates/utils.html
+++ b/r2/r2/templates/utils.html
@@ -447,3 +447,16 @@ ${unsafe(txt)}
   %endif
 </%def>
 
+<%def name="pretty_button(label, func=None, func_vars='', extra_class='')">
+  <a class="pretty-button ${extra_class}" href="#"
+     %if func is None:
+       onclick="alert('please don\'t do that again');return false;"
+     %elif func_vars:
+       onclick="return ${func}($(this), ${func_vars})"
+     %else:
+       onclick="return ${func}($(this))"
+     %endif
+     >
+       ${label}
+  </a>
+</%def>
